# gawt

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: install-skill.sh
skills/gitagent/: AGENTS.md  SKILL.md
src/gitagent/: agents.py  cli.py  errors.py  feature.py  finalize.py  gitwrap.py  models.py  proposals.py  review.py  session.py  skill.py  store.py
tests/: conftest.py  test_finalize.py  test_multi_feature.py  test_proposals.py  test_session.py  test_skill.py
