[project]
name = "gawt"
version = "0.1.0"
description = "Agent workspace manager over Git: isolate, review and consolidate multi-agent changes into a single commit."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "David Florez Mazuera" }]
keywords = ["git", "worktree", "ai-agents", "llm", "cli", "multi-agent"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Pre-processors",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/david-fm/gawt"
Repository = "https://github.com/david-fm/gawt"
Issues = "https://github.com/david-fm/gawt/issues"

[project.scripts]
gitagent = "gitagent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitagent"]
artifacts = ["_skills"]

[tool.hatch.build.targets.wheel.force-include]
"skills/gitagent" = "gitagent/_skills/gitagent"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
